# research-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude_hooks.md  dev_v0_1.md  pyproject.toml  robotics_foundation_models_analysis.md  vla_compression_literature_review.md  vla_computational_analysis.md
.claude/: settings.json
.codex/: config.toml
.github/workflows/: experiment_runner.yaml  gate_check.yaml
agents/code_critic/: CLAUDE.md
agents/critic/: CLAUDE.md
agents/engineer/: CLAUDE.md
agents/orchestrator/: CLAUDE.md
agents/research_critic/: CLAUDE.md
agents/researcher/: CLAUDE.md
config/: agents.yaml  settings.yaml  stages.yaml
experiments/safeedgevla/: test_safeedgevla.py  train.py
projects/commercial-vla-adoption-and-integration--b3681900/: state.json
projects/distributed-training-challenges-research-175f2fa2/: state.json
schemas/: claim_checklist.schema.yaml  code.schema.yaml  evidence_table.schema.yaml  experiment_log.schema.yaml  experiment_spec.schema.yaml  hypothesis_card.schema.yaml  literature_map.schema.yaml  metrics.schema.yaml  problem_brief.schema.yaml  result_report.schema.yaml  review_report.schema.yaml  run_manifest.schema.yaml  task_card.schema.yaml  test_result.schema.yaml
scripts/: codex_review.py  gpt_review.py  multi_agent.py  pipeline.py  setup.sh
templates/: experiment_spec.yaml  hypothesis_card.yaml  problem_brief.yaml
tests/: conftest.py  test_artifacts.py  test_dispatcher.py  test_execution.py  test_gate_eval.py  test_models.py  test_prechecks.py  test_sandbox.py  test_state.py  test_verdict.py
(+90 files in other folders)
