[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agent"
version = "0.2.0"
description = "Multi-agent automated research system with structured pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "jsonschema>=4.20.0",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
wandb = ["wandb>=0.16.0"]

[project.scripts]
ra = "research_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["projects", "experiments", ".git", "__pycache__", "*.egg-info"]

[tool.ruff]
target-version = "py311"
line-length = 100
